[tool.poetry]
name = "bayesrul"
version = "0.1.0"
description = ""
authors = ["Arthur Viens <arthviens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
torch = "^1.11.0"
tqdm = "^4.64.0"
lmdb = "^1.3.0"
pytorch-lightning = "^1.6.1"
bayesian-torch = "^0.2.1"
fastparquet = "^0.8.1"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
