[tool.poetry]
name = "bayesrul"
version = "0.1.0"
description = ""
authors = ["Arthur Viens <arthviens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
torch = "^1.11.0"
tqdm = "^4.64.0"
lmdb = "^1.3.0"
pytorch-lightning = "^1.6.1"
bayesian-torch = "^0.2.1"
ipykernel = "^6.13.0"
h5py = "^3.6.0"
matplotlib = "^3.5.1"
pyro-ppl = "~1.4"
pyarrow = "^8.0.0"
jupyterlab = "^3.4.2"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
optuna = "^2.10.0"
optuna-dashboard = "^0.6.4"
plotly = "^5.8.0"
torchinfo = "^1.6.6"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
